--- a/about_you.Rmd
+++ b/about_you.Rmd
@@ -16,23 +16,20 @@ Here are just a few questions so I can get to know you and so you can get practi
 ## A short history of you.  
 Where did you attend High School, and did you graduate? Compare english class to math, is one easier for you than the other? Finally which subject did you do the best in? Your answer should have at least two sentences devoted to each question.  
   
-### my answer     
+#  I went to Quartz Hill High School!!. english is as boring as math class!! English is easier! I did best in ART!
+    
   
-
-     
-
-
 ## Your computer and your and its capability?  
  For this class  you need a computer you can use at home.  So, what kind is it (windows, Apple, Linux)?  On a scale of 1 to 10, where 1 is a total dummy (doesn't know a mouse from a keyboard) and 10 is a complete geek (knows computer stuff in and out) How do you rate yourself?  You also need to have have internet access. How is your connection to the internet where you live?
 
-### my answer   
+#It's a Windows TOWER! I have a 7 out of 10 computer IQ! I have decent internet access where I live!    
   
    
 
 ## Others and You?   
 What name do you prefer to be called by your classmates and instructor, if your buddys call you something but you want people in the class to call you something else - what would that be? 
 
-### my answer     
+#Nothing besides my first name "Jamal" if anything else it would be "Jammy"      
   
    
  
@@ -43,7 +40,7 @@ What name do you prefer to be called by your classmates and instructor, if your 
 ## Aspirations?   
 What do you want to achieve in life?  What college subject do you think would be of the greatest interest to you? What degree or certificate are you trying to achieve?
 
-### my answer     
+#Im currently persuing my degree in Information Technology Cybersecurity. Another college subject I would enjoy would be something involving music. 
   
    
  
@@ -54,7 +51,7 @@ What do you want to achieve in life?  What college subject do you think would be
 ## Past adventures?  
 Have you ever gone to foreign countries, if so which ones, if not Where might you go in the future?  Have you ever been in the military, if so which branch, if not which branch would you choose if you got drafted, and why?
 
-### my answer     
+#I use to live in Germany, my father was in the ARMY. I would choose the airforce from things that I've heard.       
   
    
   
@@ -67,7 +64,7 @@ Did you take Math 115 or Math 116 ?  Did you know Math 115 only satisfies a gene
 What grade do you need to attain in stats to not upset your future plans, What is your plan?  
  
 
-### my answer     
+#I need it to transfer to San Bernadino! I assume I only need to pass with a C to keep my GPA high enough?    
   
    
  
